# yugabytedb-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  config.json.example  manifest.json  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: chat_client.py  client_full_access.py  client_limited.py  client_with_session_id.py  database_setup.sql
examples/langgraph_chatbot/: README.md  chatbot.py  pyproject.toml
mcp_auth/: __init__.py  permissions.py  providers.py
src/: server.py  tools.py
src/yugabytedb_mcp_server/: __init__.py  auth.py  guardrails.py  server.py  tools.py
tests/: README.md  _helpers.py  conftest.py  test_auth.py  test_guardrails.py  test_integration_guardrails.py  test_integration_reads.py  test_integration_writes.py  test_mcp_spec_middleware.py
