[project]
name = "yugabytedb-mcp-server"
version = "1.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx~=0.28.0",
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "boto3>=1.42.37",
    "python-dotenv>=1.0.0",
]
