[project]
name = "yugabytedb-mcp-server"
version = "2.0.0rc2"
description = "MCP server for YugabyteDB/PostgreSQL — read and write tools, optional OAuth"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Yugabyte", email = "support@yugabyte.com" },
]
keywords = ["yugabytedb", "postgresql", "mcp", "llm", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx~=0.28.0",
    "fastapi>=0.115.12",
    "psycopg>=3.2.8",
    "psycopg-pool>=3.2.6",
    "sqlparse>=0.5.0",
    "boto3>=1.42.37",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/yugabyte/yugabytedb-mcp-server"
Repository = "https://github.com/yugabyte/yugabytedb-mcp-server"
Issues = "https://github.com/yugabyte/yugabytedb-mcp-server/issues"

[project.scripts]
# Two entry-point names pointing at the same main() so callers can use
# either form. `yugabytedb-mcp-server` matches the package name, which lets
# `uvx yugabytedb-mcp-server` resolve correctly (uvx defaults to looking up
# an executable matching the package name). `yugabytedb-mcp` is the shorter
# form for direct invocation after `pipx install` / `uv tool install`.
yugabytedb-mcp = "yugabytedb_mcp_server.server:main"
yugabytedb-mcp-server = "yugabytedb_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yugabytedb_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "src/yugabytedb_mcp_server",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "cryptography>=42.0",
]
